Allow Vercel CORS